# miniMAT

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt
src/miniMAT/: miniMAT.cpp
src/miniMAT/ast/: AST.hpp  ASTDisplay.cpp  ASTDisplay.hpp  AssignStmt.cpp  AssignStmt.hpp  BinaryExpr.cpp  BinaryExpr.hpp  CallExpr.cpp  CallExpr.hpp  ClcStmt.cpp  ClcStmt.hpp  ClearStmt.cpp  ClearStmt.hpp  DisplayVisitor.hpp  ExprList.hpp  ExprStmt.cpp  ExprStmt.hpp  Expression.hpp  FloatLiteral.cpp  FloatLiteral.hpp  IdRef.cpp  IdRef.hpp  Identifier.cpp  Identifier.hpp  Literal.hpp  LiteralExpr.cpp  LiteralExpr.hpp  Matrix.hpp  MatrixLiteral.cpp  MatrixLiteral.hpp  Operator.cpp  Operator.hpp  RefExpr.cpp  RefExpr.hpp  Reference.hpp  ScalarType.cpp  ScalarType.hpp  Statement.hpp  Terminal.cpp  Terminal.hpp  (+10 more)
src/miniMAT/checker/: Checker.cpp  Checker.hpp
src/miniMAT/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenKind.cpp  TokenKind.hpp
src/miniMAT/parser/: Parser.cpp  Parser.hpp
src/miniMAT/reporter/: ErrorReporter.cpp  ErrorReporter.hpp
src/miniMAT/util/: Dims.cpp  Dims.hpp  Function.cpp  Function.hpp  NumDigits.cpp  NumDigits.hpp  PrintResult.cpp  PrintResult.hpp  Stream.hpp  Util.cpp  Util.hpp  make_unique.hpp
src/miniMAT/visit/: Visitors.cpp  Visitors.hpp  display.cpp  display.hpp
